# discord-bot

./: .replit  CHANGELOG.md  README.md  main.py  main_slash.py  pyproject.toml  replit.md
.github/workflows/: fps-daily-renewal.yml  hidencloud-renewal.yml
builds/: .gitignore  README.txt  main_slash.py  requirements.txt
