[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py[voice]>=2.6.4",
    "googletrans==4.0.0rc1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yt-dlp>=2025.11.12",
]
